--- a/test/fixtures/user_tests.yml
+++ b/test/fixtures/user_tests.yml
@@ -1,7 +1,9 @@
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
 
 one:
-  lvl1: MyString
+  name: MyString
+  email: MyString
 
 two:
-  lvl1: MyString
+  name: MyString
+  email: MyString
